# iugu-py

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
.junie/: guidelines.md
.junie/guidelines/: build-and-configuration.md  development.md  gotchas.md  index.md  language-policy.md  purpose.md  testing.md  workflows.md
src/iugupy/: __init__.py  client.py  config.py  errors.py
src/iugupy/resources/: __init__.py  base.py  customers.py  invoices.py  plans.py  subscriptions.py
tests/: conftest.py  test_basic.py  test_resources.py  test_validation.py
