[project]
name = "iugupy"
version = "0.1.0"
description = "Python REST APIs for Iugu"
readme = "README.md"
authors = [
    { name = "Ramon Soares", email = "ramongsoares@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"
